<resources>
    <string name="app_name">Dbrah Provider</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="create_your_account_now">create your account now</string>
    <string name="continue1">Continue</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="phone">Phone Number</string>
    <string name="phone2">Phone</string>
    <string name="login">Login</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Contact us</string>
    <string name="wait">Wait...</string>
    <string name="new_">New</string>
    <string name="current">Current</string>
    <string name="prev">Previous</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="next">Next</string>
    <string name="notifications">notifications</string>
    <string name="sign_up">Sign up</string>
    <string name="update">Update</string>
    <string name="please_enter_code_sent_to">please enter code sent to</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="search">Search...</string>
    <string name="rate_app">Rate App</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="no_reservation_to_show">No reservation to show</string>
    <string name="sorry">Sorry !</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="map_key" />
    <string name="filter">Filter</string>
    <string name="price">Price</string>
    <string name="show_results">Show results</string>
    <string name="more">More</string>
    <string name="details">Details</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to</string>
    <string name="user_blocked">User Blocked</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="user_found">User Found</string>
    <string name="suc">Success</string>
    <string name="all">All</string>
    <string name="no_services_to_show">No services to show</string>
    <string name="no_search_result">No search result</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="field_required">field required</string>
    <string name="what_are_you_looking_for">what are you looking for ?</string>
    <string name="categories">Categories</string>
    <string name="no_categories_to_show">No categories to show</string>
    <string name="choose_your_preferred_method_of_logging_in">Choose your preferred method of logging in .</string>
    <string name="store_name">Store Name</string>
    <string name="category">Category</string>
    <string name="vat_number">Vat Number</string>
    <string name="commercial_record">Commercial Record</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="country_code">Country Code</string>
    <string name="password">Password</string>
    <string name="inv_email">Invaild Email</string>
    <string name="pass_short">Password Short</string>
    <string name="don_t_have_an_account">don’t have an account ?</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="welcome">Welcome</string>
    <string name="statistics">statistics</string>
    <string name="client">Client</string>
    <string name="this_month_s_clients">This month\'s Clients</string>
    <string name="order">Order</string>
    <string name="this_month_s_order">This month’s order</string>
    <string name="this_month_s_miss_order">This month’s miss order</string>
    <string name="total_clients_this_year">Total sales for this month</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="vat_number2">VAT Number :</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="choose_category">Please choose category</string>
    <string name="please_enter_your_email">Please enter your registered email </string>
    <string name="we_will_send_a_verification_code_email">We will send a verification code to your registered email</string>
    <string name="we_will_send_a_verification_code_phone">We will send a verification code to your registered Phone</string>
    <string name="done">Done</string>
    <string name="please_enter_your_verification_code">Please enter your verification code .</string>
    <string name="we_have_sent_a_verification_code_to_your_registered_email">We have sent a verification code to your registered email</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_a_new_password">Please enter a new password</string>
    <string name="new_password">New Password</string>
    <string name="order_number">Order Number</string>
    <string name="waiting_for_the_customer_s_response_to_the_offer">Waiting for the customer\'s response to the offer</string>
    <string name="your_offer_has_been_accepted">Your offer has been accepted</string>
    <string name="pin">Pin</string>
    <string name="pined">Pined</string>
    <string name="map">Map</string>
    <string name="orderDetails">Order Details</string>
    <string name="ordered">Ordered :</string>
    <string name="hide">Hide</string>
    <string name="add_offer">Add Offer</string>
    <string name="expected_delivery_time">Expected delivery time?</string>
    <string name="expected_delivery_time2">Expected delivery time :</string>
    <string name="offer">Offer</string>
    <string name="preview">Preview</string>
    <string name="send_offer">Send Offer</string>
    <string name="language">Language</string>
    <string name="total_price">Total Price</string>
    <string name="single_price">Single Price</string>
    <string name="sar">R.S</string>
    <string name="of">OF</string>
    <string name="price_per_item">Price Per Item</string>
    <string name="or">OR</string>
    <string name="unavailable">Unavailable</string>
    <string name="available_quantity">Available Quantity :</string>
    <string name="single_price2">Single Price :</string>
    <string name="total_price2">Total Price :</string>
    <string name="total_cost">Total Cost</string>
    <string name="more_options">More Options :</string>
    <string name="item">Item</string>
    <string name="less_quantity">less quantity</string>
    <string name="other_brand">Other Brand</string>
    <string name="reviews">Reviews</string>
    <string name="type_a_message">Type Here</string>
    <string name="chat">Chat</string>
    <string name="rate">Rate</string>
    <string name="your_offer_has_been_rejected">Your Offer Has Been Rejected</string>
    <string name="preparing">Preparing</string>
    <string name="on_way">On Way</string>
    <string name="deliverd">Deliverd</string>
    <string name="select">Select</string>
    <string name="add_commercial_record">Add commercial record</string>
    <string name="product_image">Product image</string>
    <string name="product_title">Product title</string>
    <string name="main_category">Main category</string>
    <string name="specifications">Specifications</string>
    <string name="write_here">Write here ...</string>
    <string name="control_products">Control products</string>
    <string name="suggest_new_product">Suggest a new products</string>
    <string name="no_products_to_show">No products to show</string>
    <string name="add_product_image">Add product image</string>
    <string name="ch_product">Choose Product</string>
    <string name="save">Save</string>
    <string name="updated_suc">Updated successfully</string>
    <string name="select_product">Select product</string>
    <string name="not_available">Not available</string>
    <string name="alternative_product">Alternative Product</string>
    <string name="less_quantitiy">Smaller Quantities</string>
    <string name="not_avail_now">Not Available Now</string>
    <string name="attach_sent">Attach Sent</string>
    <string name="start_preparing">Start Preparing</string>
    <string name="start_delivring">Order Sent To Delivery</string>
    <string name="finish_delivery">Finish Delivery</string>
    <string name="new_order">New Order</string>
    <string name="order_num">Oder Num : </string>
    <string name="new_client">Client</string>
    <string name="nationality">Nationality</string>
    <string name="town">Town</string>
    <string name="choose_nationality">Choose nationality</string>
    <string name="choose_town">Choose town</string>
    <string name="location">Location</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="copy">Text Copy</string>
    <string name="on_the_way">On The Way</string>
    <string name="picked_up">Picked Up</string>
    <string name="your_order_accepted">Your Order Accepted By Representative</string>
    <string name="your_order_has_been_rejected">Representative Reject Order</string>
    <string name="information">Information</string>
    <string name="sign_up_inf"><![CDATA[<h4>1.Photo</h4> <p> lorem </p><br> <h4>2.Company Name</h4> <p> lorem </p> <br> <h4>3.Email</h4> <p> lorem </p> <br> <h4>4.Tax Number</h4> <p> lorem </p>]]></string>
    <string name="ch_time">Choose Time</string>
    <string name="password_weak">Password Is Weak</string>
    <string name="must_equal">Must be 15 Numbers</string>
    <string name="repeat_password_must">Repeat Pasword Must Equal Password</string>
    <string name="vat_found">Vat Number Found</string>
    <string name="em_found">Email Found</string>
    <string name="ph_found">Phone Found</string>
    <string name="inv_iban">Invaild Iban</string>
    <string name="iban">Iban</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="banks">Bank Accounts</string>
    <string name="edit_bank_account">Edit Bank Account</string>
    <string name="invaild_phone">Invaild Phone</string>
    <string name="please_enter_your_phone">Please Enter Your Phone</string>
    <string name="reset_with_email">Reset with email</string>
    <string name="reset_with_phone">Reset With Phone</string>
    <string name="user_not_found">User Not Found</string>
    <string name="incorrect_code">Incorrect Code</string>
    <string name="password_changed">Paswword Changed Sucess</string>
    <string name="price_can_not">Price Can not Bigger than 5000</string>
    <string name="products_cost">Products Cost</string>
    <string name="vat">Vat</string>
    <string name="bank_name">Bank Name</string>
    <string name="refused_offers">Previous Offers</string>
    <string name="delivery_time">Delivery Time :</string>

</resources>