<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.apps.dbrah_Provider.model.SuggestNewProductModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="24dp"
                            android:layout_marginEnd="16dp"
                            android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_image" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:fontFamily="@font/almira"
                                android:text="@string/product_image"
                                android:textColor="@color/black2"
                                android:textSize="16sp" />
                        </LinearLayout>

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                app:cardCornerRadius="10dp"
                                app:cardElevation="0dp"

                                >
                                <FrameLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="176dp"
                                    android:background="@drawable/rounded_color_white_stroke_grey6">
                                    <ImageView
                                        android:id="@+id/image"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:scaleType="fitXY" />

                                    <ImageView
                                        android:id="@+id/icon"
                                        android:layout_width="48dp"
                                        android:layout_height="48dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_upload2"
                                        app:tint="@color/grey6" />

                                </FrameLayout>
                            </androidx.cardview.widget.CardView>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_title" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:fontFamily="@font/almira"
                                android:text="@string/product_title"
                                android:textColor="@color/black2"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="53dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/rounded_color_white_stroke_grey6"
                            android:padding="16dp">

                            <EditText
                                error="@{model.error_title}"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/transparent"
                                android:fontFamily="@font/almira"
                                android:hint="@string/name"
                                android:text="@={model.product_title}"
                                android:textColor="@color/black2"
                                android:textColorHint="@color/grey7"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_main_category" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:fontFamily="@font/almira"
                                android:text="@string/main_category"
                                android:textColor="@color/black2"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="53dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/rounded_color_white_stroke_grey6"
                            android:padding="16dp">

                            <Spinner
                                android:id="@+id/spinnerCategory"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_write"
                                app:tint="@color/colorPrimary" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:fontFamily="@font/almira"
                                android:text="@string/specifications"
                                android:textColor="@color/black2"
                                android:textSize="16sp" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="133dp"
                            android:layout_marginTop="12dp"
                            android:padding="16dp"
                            android:background="@drawable/rounded_color_white_stroke_grey6">

                            <EditText
                                error="@{model.error_specifications}"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@color/transparent"
                                android:gravity="top"
                                android:text="@={model.specifications}"
                                android:hint="@string/write_here"
                                android:inputType="textMultiLine"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:fontFamily="@font/almira"

                                />
                        </LinearLayout>

                            <Button
                                android:id="@+id/send"
                                android:layout_width="match_parent"
                                android:layout_height="56dp"
                                android:background="@drawable/small_rounded_primary"
                                android:layout_marginTop="24dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="16dp"
                                android:text="@string/send"
                                android:fontFamily="@font/almira"
                                android:textColor="@color/white"
                                android:textAllCaps="false"
                                android:textSize="16sp"/>
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="24dp"
                            android:alpha=".5"
                            android:background="@drawable/shadow_top" />
                    </FrameLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@color/black_trans"
            android:padding="16dp"
            app:el_duration="800"
            app:el_expanded="false"
            app:el_parallax=".5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/flGallery"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="12dp"
                            android:src="@drawable/ic_gallery"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/gallery"
                            android:fontFamily="@font/almira"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/flCamera"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="12dp"
                            android:src="@drawable/ic_camera"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/camera"
                            android:fontFamily="@font/almira"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                </FrameLayout>

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/almira"
                    android:layout_marginTop="25dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>


        </net.cachapa.expandablelayout.ExpandableLayout>

    </FrameLayout>
</layout>