<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="model"
            type="com.apps.dbrah_Provider.model.LoginModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:fillViewport="true"
                    app:layout_constraintBottom_toTopOf="@id/imgForget"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="80dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/please_enter_your_email"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/we_will_send_a_verification_code"
                            android:textColor="@color/grey7"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:id="@+id/llEmail"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/rounded_shape_gray1_strock6">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:padding="3dp"
                                android:src="@drawable/ic_mail"

                                />


                            <EditText
                                error="@{model.error_email}"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:background="@color/transparent"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:lines="1"
                                android:paddingStart="8dp"
                                android:paddingEnd="8dp"
                                android:singleLine="true"
                                android:text="@={model.email}"
                                android:textColor="@color/black"
                                android:textColorHint="@color/grey7"
                                android:textSize="14sp"

                                />
                        </LinearLayout>

                        <Button
                            android:id="@+id/btnSend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/rounded_primary"
                            android:gravity="center"
                            android:minWidth="180dp"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:text="@string/send"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>

                <ImageView
                    android:id="@+id/imgForget"
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:scaleX='@{lang.equals("ar")?-1:1}'
                    android:src="@drawable/forget_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </FrameLayout>
</layout>